# lib-prboom

./: .clang-format  .gitignore  .pre-commit-config.yaml  COPYING  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac  notes_on_configuring_building_running.sh  prboom.spec.in
ICONS/: Makefile.am  resource.h
VisualC6/: Doom.dsp  Makefile.am  prboom_server.dsp
VisualC8/: Makefile.am  config.h
autotools/: ac_cpu_optimisations.m4
data/: Makefile.am
doc/: MBF.txt  MBFFAQ.txt  Makefile.am  README.compat  boom.cfg.5  boom.txt  prboom-game-server.6  prboom.6
scripts/: check_self_sufficiency_of_c_headers.py
src/: Makefile.am  am_map.c  am_map.h  d_client.c  d_deh.c  d_deh.h  d_englsh.h  d_event.h  d_ipxgate.c  d_items.c  d_items.h  d_main.c  d_main.h  d_net.h  d_player.h  d_server.c  d_think.h  doomdata.h  doomdef.h  doomstat.c  doomstat.h  doomtype.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  gl_intern.h  gl_main.c  gl_struct.h  gl_texture.c  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  i_network.h  i_sound.h  i_system.h  i_video.h  (+105 more)
src/MAC/: SDLMain.h  UKFileWatcher.h  UKKQueue.h  UKKQueue.m  UKMainThreadProxy.h  UKMainThreadProxy.m  config.h  i_sound.c
src/POSIX/: Makefile.am  i_system.c
src/SDL/: Makefile.am  SDL_win32_main.c  i_joy.c  i_main.c  i_network.c  i_sound.c  i_sshot.c  i_system.c  i_video.c
tests/: Makefile.am  test_example.cpp  test_m_checkparm.cpp  testmain.cpp
